@startuml GroceryFlow-ERD-Minimal
' GroceryFlow - Minimal ERD for HW5
' Entities: users, products, orders, order_items

hide circle
skinparam linetype ortho
skinparam shadowing false
skinparam backgroundColor #FEFEFE

' Styling
skinparam entity {
  BackgroundColor #2D2D2D
  BorderColor #2D2D2D
  FontColor #FFFFFF
  ArrowColor #666666
}

entity "users" as users {
  * id : uuid <<PK>>
  --
  * email : varchar(255) <<UNIQUE>>
  * password_hash : varchar(255)
  * name : varchar(255)
  * role : varchar(50)
  --
  * created_at : timestamptz
  * updated_at : timestamptz
}

entity "products" as products {
  * id : uuid <<PK>>
  --
  * sku : varchar(100) <<UNIQUE>>
  * name : varchar(255)
  * description : text
  * price : numeric(12,2)
  * stock : int
  * is_active : boolean
  --
  * created_at : timestamptz
  * updated_at : timestamptz
}

entity "orders" as orders {
  * id : uuid <<PK>>
  --
  * user_id : uuid <<FK>>
  * idempotency_key : uuid
  * status : varchar(50)
  * total_amount : numeric(12,2)
  --
  * created_at : timestamptz
  * updated_at : timestamptz
  --
  UNIQUE(user_id, idempotency_key)
}

entity "order_items" as order_items {
  * id : uuid <<PK>>
  --
  * order_id : uuid <<FK>>
  * product_id : uuid <<FK>>
  * product_name : varchar(255)
  * qty : int
  * unit_price : numeric(12,2)
  * line_total : numeric(12,2)
}

' Relationships
users ||--o{ orders : "places"
orders ||--|{ order_items : "contains"
products ||--o{ order_items : "referenced in"

@enduml
